; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/extr_driver.c_next_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/extr_driver.c_next_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.klist_iter = type { i32 }
%struct.klist_node = type { i32 }
%struct.device_private = type { %struct.device* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.device* (%struct.klist_iter*)* @next_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.device* @next_device(%struct.klist_iter* %0) #0 {
  %2 = alloca %struct.klist_iter*, align 8
  %3 = alloca %struct.klist_node*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_private*, align 8
  store %struct.klist_iter* %0, %struct.klist_iter** %2, align 8
  %6 = load %struct.klist_iter*, %struct.klist_iter** %2, align 8
  %7 = call %struct.klist_node* @klist_next(%struct.klist_iter* %6)
  store %struct.klist_node* %7, %struct.klist_node** %3, align 8
  store %struct.device* null, %struct.device** %4, align 8
  %8 = load %struct.klist_node*, %struct.klist_node** %3, align 8
  %9 = icmp ne %struct.klist_node* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.klist_node*, %struct.klist_node** %3, align 8
  %12 = call %struct.device_private* @to_device_private_driver(%struct.klist_node* %11)
  store %struct.device_private* %12, %struct.device_private** %5, align 8
  %13 = load %struct.device_private*, %struct.device_private** %5, align 8
  %14 = getelementptr inbounds %struct.device_private, %struct.device_private* %13, i32 0, i32 0
  %15 = load %struct.device*, %struct.device** %14, align 8
  store %struct.device* %15, %struct.device** %4, align 8
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.device*, %struct.device** %4, align 8
  ret %struct.device* %17
}

declare dso_local %struct.klist_node* @klist_next(%struct.klist_iter*) #1

declare dso_local %struct.device_private* @to_device_private_driver(%struct.klist_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
